# perdy

./: .gitignore  pyproject.toml  setup.cfg  setup.py
Perdy/: diff.py  parser.py  pretty.py  pyson.py  pyxbext.py
test/: Sample.json  dotmapify.py  perdirator.py
tests/: perdirator.py
